Fixes alignment of home keyword input box.
Keyword input box on homepage was misaligned with the button. This
fixes the alignment by setting the vertical-alignment property.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1570,6 +1570,7 @@ body { top: 0px !important; }
   {
     height:50px;
     width:290px;
+    vertical-align:middle;
   }
 
   button // find button styles
